# SDLRT

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.hpp  Constants.hpp  Material.hpp  Object.hpp  Plane.cpp  Plane.hpp  Ray.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  main.cpp
